--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
   "name": "tcrm-api",
   "version": "1.0.0",
-  "description": "tcrm api",
+  "description": "Travel CRM API",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://x-token-auth:ATCTT3xFfGN08UjiRDlAej2zTHa9HhffdfETlYLgB-7kg6cYknrQgSFa-hI4MeWGa7k3rFlpelCQ_uzxRoxwsxoXpKVm5RXN0wJBrEtZpMnAKtO4y7UvgzF6XvQGA8iOjgAcJ-wnsK1yeZwV0FJciOVMqdFytSHPRTdOAw7wjND9kmhB01aJ3TM%3D6639C8E3@bitbucket.org/developerdarshan444/tcrm-api.git"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "db:migrate": "sequelize-cli db:migrate",
+    "db:migrate:undo": "sequelize-cli db:migrate:undo",
+    "db:migrate:undo:all": "sequelize-cli db:migrate:undo:all",
+    "db:seed": "sequelize-cli db:seed:all",
+    "db:seed:undo": "sequelize-cli db:seed:undo:all",
+    "db:create": "sequelize-cli db:create",
+    "db:drop": "sequelize-cli db:drop"
   },
   "keywords": [
-    "TCRM-API"
+    "TCRM-API",
+    "Travel CRM",
+    "Node.js",
+    "Express",
+    "Sequelize"
   ],
   "author": "Darshan",
   "license": "ISC",
-  "bugs": {
-    "url": "https://bitbucket.org/developerdarshan444/tcrm-api/issues"
-  },
-  "homepage": "https://bitbucket.org/developerdarshan444/tcrm-api#readme",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
@@ -30,11 +34,16 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-validator": "^7.0.1",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.14.4",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
-  },
-  "type": "module"
+    "nodemon": "^3.1.10",
+    "sequelize-cli": "^6.6.3"
+  }
 }
